c/include/rapier.h

/**
 * Events accumulate until clear. Copying events never drains them, allowing two-call buffer
 * sizing.
 * @ingroup events
 */
typedef struct R3EventCollector R3EventCollector;
/**
 * Sole owner of simulation state. Handles belong to the world that created them.
 * Ordinary reads may overlap. A mutation or step requires exclusive access.
 * Destruction must be externally synchronized with all users of this pointer.
 * @ingroup worlds
 */
typedef struct R3World R3World;
/**
 * ABI booleans are uint32_t: zero is false, one is true.
 * @ingroup math
 */
typedef uint32_t R3Bool;
/**
 * Status-returning operations use these integer codes.
 * @ingroup errors
 */
typedef uint32_t R3Status;
/**
 * Cartesian vector with two or three components.
 * @ingroup math
 */
typedef struct R3Vector {
  /**
   * X component.
   */
  R3Real x;
  /**
   * Y component.
   */
  R3Real y;
#if defined(RAPIER_DIM3)
  /**
   * Z component.
   */
  R3Real z;
#endif
} R3Vector;
/**
 * Copyable non-owning handle: world pointer plus entity index and generation.
 * The world must remain alive throughout every use. Copying does not retain it.
 * UINT32_MAX/UINT32_MAX with a NULL world is invalid.
 * @ingroup rigid_bodies
 */
typedef struct R3RigidBodyHandle {
  /**
   * Borrowed owning world. Never use this handle after freeing that world.
   */
  struct R3World *world;
  /**
   * Slot index; UINT32_MAX denotes the explicit invalid handle.
   */
  uint32_t index;
  /**
   * Slot generation used to reject stale handles. Do not modify it.
   */
  uint32_t generation;
} R3RigidBodyHandle;
/**
 * Stack-allocated rigid-body construction data. Initialize with r3DynamicRigidBodyDesc,
 * r3FixedRigidBodyDesc, or a kinematic description constructor.
 * Copying this value is safe; it owns no resources and must never be freed by Rapier.
 * @ingroup rigid_bodies
 */
typedef struct R3RigidBodyDesc {
  /**
   * World-space pose.
   */
  struct R3Pose position;
  /**
   * World-space linear velocity.
   */
  struct R3Vector linvel;
  /**
   * World-space angular velocity in radians per second.
   */
  R3AngVector angvel;
  /**
   * R3_DYNAMIC, R3_FIXED, R3_KINEMATIC_POSITION_BASED, or R3_KINEMATIC_VELOCITY_BASED.
   */
  uint32_t bodyType;
  /**
   * Multiplier applied to world gravity.
   */
  R3Real gravityScale;
  /**
   * Nonnegative linear damping coefficient.
   */
  R3Real linearDamping;
  /**
   * Nonnegative angular damping coefficient.
   */
  R3Real angularDamping;
  /**
   * Nonnegative mass added to attached collider contributions.
   */
  R3Real additionalMass;
  /**
   * 1 uses additionalMassProperties; 0 uses additionalMass.
   */
  R3Bool useAdditionalMassProperties;
  /**
   * Additional body-local mass and inertia when enabled.
   */
  struct R3MassProperties additionalMassProperties;
  /**
   * Locked-axis bitmask; translations precede rotations.
   */
  uint8_t lockedAxes;
  /**
   * Whether automatic sleeping is allowed.
   */
  R3Bool canSleep;
  /**
   * Whether the body starts/is asleep.
   */
  R3Bool sleeping;
  /**
   * Whether continuous collision detection is enabled.
   */
  R3Bool ccdEnabled;
  /**
   * Nonnegative prediction distance for soft CCD.
   */
  R3Real softCcdPrediction;
  /**
   * Whether to allow fast rotations without the native angular-motion clamp.
   */
  R3Bool allowFastRotation;
  /**
   * Whether this setting/object is enabled (0 or 1).
   */
  R3Bool enabled;
  /**
   * Signed dominance group; larger groups dominate smaller groups.
   */
  int8_t dominanceGroup;
  /**
   * Extra solver iterations for this body and connected bodies.
   */
  size_t additionalSolverIterations;
  /**
   * Extra PGS iterations for this body.
   */
  size_t additionalPgsIterations;
  /**
   * Whether to include gyroscopic forces (3D).
   */
  R3Bool gyroscopicForcesEnabled;
  /**
   * Application data; Rapier does not own pointers encoded in it.
   */
  struct R3UserData userData;
} R3RigidBodyDesc;
/**
 * Sizes of the POD types in this library build, for foreign-language layout checks.
 * @ingroup math
 */
typedef struct R3PodLayout {
  /**
   * Size in bytes of the rigidBodyDesc structure; zero when unavailable.
   */
  size_t rigidBodyDesc;
  /**
   * Size in bytes of the colliderDesc structure; zero when unavailable.
   */
  size_t colliderDesc;
  /**
   * Size in bytes of the shapeDesc structure; zero when unavailable.
   */
  size_t shapeDesc;
  /**
   * Size in bytes of the jointDesc structure; zero when unavailable.
   */
  size_t jointDesc;
  /**
   * Size in bytes of the softBodyMaterial structure; zero when unavailable.
   */
  size_t softBodyMaterial;
  /**
   * Size in bytes of the integrationParameters structure; zero when unavailable.
   */
  size_t integrationParameters;
  /**
   * Size in bytes of the softBodyDesc structure; zero when unavailable.
   */
  size_t softBodyDesc;
  /**
   * Size in bytes of the softMeshBindingDesc structure; zero when unavailable.
   */
  size_t softMeshBindingDesc;
  /**
   * Size in bytes of the queryOptions structure; zero when unavailable.
   */
  size_t queryOptions;
  /**
   * Zero unless 3D f32 robotics is enabled.
   */
  size_t urdfLoaderOptions;
  /**
   * Zero unless 3D f32 robotics is enabled.
   */
  size_t mjcfLoaderOptions;
} R3PodLayout;
/**
 * Callbacks must not unwind or retain arguments. Use their ReadContext to inspect bodies and
 * colliders; ordinary access to the stepping world returns WORLD_BUSY. Mutations must be
 * performed after stepping. With parallel builds
 * callbacks and their user_data must be safe for concurrent invocation. NULL callbacks use
 * defaults.
 * @ingroup callbacks
 */
typedef struct R3PhysicsHooks {
  /**
   * Application data; Rapier does not own pointers encoded in it.
   */
  void *user_data;
  /**
   * Optional contact-pair filter, called only for colliders enabling the hook.
   */
  R3PairFilter filter_contact_pair;
  /**
   * Optional sensor-pair filter, called only for colliders enabling the hook.
   */
  R3PairFilter filter_intersection_pair;
  /**
   * Optional legacy aggregate contact-edit callback.
   */
  R3ModifyContacts modify_solver_contacts;
  /**
   * Runs after the legacy property callback. Context accessors may be called here.
   */
  R3ModifyContactContext modify_solver_contacts_context;
} R3PhysicsHooks;
/**
 * Return a dynamic rigid-body description with native defaults; no allocation.
 * @ingroup rigid_bodies
 */
RAPIER_API struct R3RigidBodyDesc RAPIER_CALL r3DynamicRigidBodyDesc(void);
/**
 * Create a body from the description and return its world-bound handle. The world owns the body.
 * @ingroup rigid_bodies
 */
RAPIER_API
struct R3RigidBodyHandle RAPIER_CALL r3InsertRigidBody(struct R3World *world,
                                                const struct R3RigidBodyDesc *desc);
/**
 * Return POD structure sizes for checking foreign-language layouts against this library.
 * @ingroup errors
 */
RAPIER_API struct R3PodLayout RAPIER_CALL r3PodLayout(void);
/**
 * Status of the most recent fallible operation on this thread. Reading this or
 * LastError does not clear it. Infallible value constructors do not change it.
 * Check immediately after a fallible value-returning operation when recovering
 * from errors instead of using a fail-fast error callback.
 * @ingroup errors
 */
RAPIER_API R3Status RAPIER_CALL r3LastStatus(void);
/**
 * Thread-local UTF-8 diagnostic, valid until the next fallible call on this thread.
 * @ingroup errors
 */
RAPIER_API const char *RAPIER_CALL r3LastError(void);
/**
 * Hooks and events may be NULL. This call invalidates all borrowed set-element pointers.
 * Advance simulation by one timestep. Hooks and events may be NULL.
 * @ingroup worlds
 */
RAPIER_API
R3Status RAPIER_CALL r3Step(struct R3World *world,
                   const struct R3PhysicsHooks *hooks,
                   const struct R3EventCollector *events);
/**
 * Check this before passing any dimension/precision-dependent structs across the ABI.
 * @ingroup errors
 */
RAPIER_API
R3Status RAPIER_CALL r3CheckAbi(uint32_t version,
                        uint32_t dimension,
                        size_t real_size,
                        size_t vector_size,
                        size_t pose_size);
/**
 * Return the rigid body world-space translation.
 * @ingroup rigid_bodies
 */
RAPIER_API struct R3Vector RAPIER_CALL r3RigidBody_Translation(struct R3RigidBodyHandle handle);
/**
 * Create an owned world. Release it with FreeWorld.
 * @ingroup worlds
 */
RAPIER_API struct R3World *RAPIER_CALL r3NewWorld(void);
/**
 * Free a world. NULL is allowed. Rejects destruction from an active callback.
 * The caller must prevent other threads from starting calls during destruction.
 * @ingroup worlds
 */
RAPIER_API R3Status RAPIER_CALL r3FreeWorld(struct R3World *world);