bindings/c/include/rapier_math.h

/** Construct a vector from its components. */
static inline RAPIER_TYPE(Vector) RAPIER_FN(Vector)(RAPIER_TYPE(Real) x, RAPIER_TYPE(Real) y) {
  RAPIER_TYPE(Vector) result = {x, y};
  return result;
}
/** Construct a 2D rotation from an angle in radians. */
static inline RAPIER_TYPE(Rotation) RAPIER_FN(Rotation)(RAPIER_TYPE(Real) angle) {
  RAPIER_TYPE(Rotation) result = {angle};
  return result;
}
/** Construct a vector from its components. */
static inline RAPIER_TYPE(Vector) RAPIER_FN(Vector)(RAPIER_TYPE(Real) x, RAPIER_TYPE(Real) y, RAPIER_TYPE(Real) z) {
  RAPIER_TYPE(Vector) result = {x, y, z};
  return result;
}
/** Construct a pose from translation and rotation without validation. */
static inline RAPIER_TYPE(Pose) RAPIER_FN(Pose)(RAPIER_TYPE(Vector) translation,
                                   RAPIER_TYPE(Rotation) rotation) {
  RAPIER_TYPE(Pose) result = {translation, rotation};
  return result;
}
/** Construct mass properties from a local center of mass, a mass, and principal angular inertia
 * (a scalar in 2D); in 3D the principal inertia frame is the identity rotation. */
static inline RAPIER_TYPE(MassProperties) RAPIER_FN(MassProperties)(RAPIER_TYPE(Vector) local_com,
                                                     RAPIER_TYPE(Real) mass,
                                                     RAPIER_TYPE(AngVector) principal_inertia) {
#if defined(RAPIER_DIM2)
  RAPIER_TYPE(MassProperties) result = {local_com, mass, principal_inertia};
#else
  RAPIER_TYPE(Rotation) frame = {0, 0, 0, 1};
  RAPIER_TYPE(MassProperties) result = {local_com, mass, principal_inertia, frame};
#endif
  return result;
}